--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "socket.io-client": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
