--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-scroll": "^1.8.7",
     "socket.io-client": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/react-scroll": "^1.8.3",
     "autoprefixer": "^10.4.7",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
