--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-scroll": "^1.8.7",
-    "socket.io-client": "^4.5.0"
+    "socket.io-client": "^4.5.0",
+    "sweetalert2": "^11.4.14"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
