--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,70 +26,41 @@ services:
       - expressapp
       - reactapp
       - nginx-proxy
-#      - letsencrypt
+      - letsencrypt
     environment:
+      - VIRTUAL_PORT=80
       - VIRTUAL_HOST=chat.jcoder.es,www.chat.jcoder.es
-#      - LETSENCRYPT_HOST=chat.jcoder.es,www.chat.jcoder.es
+      - LETSENCRYPT_HOST=chat.jcoder.es,www.chat.jcoder.es
     restart: always
 
-#  nginx-proxy:
-#    container_name: nginx-proxy
-#    image: jwilder/nginx-proxy
-#    restart: always
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#    volumes:
-#      - /var/run/docker.sock:/tmp/docker.sock:ro
-#      - certs:/etc/nginx/certs:ro
-#      - vhostd:/etc/nginx/vhost.d
-#      - html:/usr/share/nginx/html
-#    labels:
-#      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
-
-#  letsencrypt:
-#    container_name: letsencrypt
-#    image: jrcs/letsencrypt-nginx-proxy-companion
-#    restart: always
-#    environment:
-#      - NGINX_PROXY_CONTAINER=nginx-proxy
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock:ro
-#      - certs:/etc/nginx/certs:rw
-#      - vhostd:/etc/nginx/vhost.d
-#      - html:/usr/share/nginx/html
-
   nginx-proxy:
-    image: nginxproxy/nginx-proxy
     container_name: nginx-proxy
+    image: jwilder/nginx-proxy:alpine
+    restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - certs:/etc/nginx/certs:ro
-      - conf:/etc/nginx/conf.d
       - vhost:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
-    network_mode: bridge
+    labels:
+      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
 
-  acme-companion:
-    image: nginxproxy/acme-companion
-    container_name: nginx-proxy-acme
+  letsencrypt:
+    container_name: letsencrypt
+    image: jrcs/letsencrypt-nginx-proxy-companion:2.2
+    restart: always
     environment:
-      - DEFAULT_EMAIL=mail@yourdomain.tld
+      - NGINX_PROXY_CONTAINER=nginx-proxy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - certs:/etc/nginx/certs:rw
-      - acme:/etc/acme.sh
-      - conf:/etc/nginx/conf.d
       - vhost:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
-    network_mode: bridge
 
 volumes:
   certs:
   html:
-  vhostd:
-  conf:
-  acme:
+  vhost:
